--- a/2_1_selector-basic.html
+++ b/2_1_selector-basic.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selector Basic</title>
     <style>
-        /*전체 선택자*/
+        /* 전체 선택자 */
         /* * {
             margin: 0;
             padding: 0;
         } */
 
-        /*Type 선택자*/
+        /* Type 선택자 */
         h2 {
             color: green;
         }
@@ -21,7 +21,7 @@
             text-align: center;
         }
 
-        /*Class 선택자*/
+        /* Class 선택자 */
         .red--text {
             color: red;
         }
@@ -35,15 +35,38 @@
             color: green;
         }
 
-        /*ID 선택자*/
+        /* ID 선택자 */
         #title {
             font-size: 40px;
             color: darkblue;
             background-color: yellow;
         }
+
+        /* 그룹 선택자 */
+        h1, h2 {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
+    <div>
+        <span>
+
+        </span>
+        <p>
+            <span>
+
+            </span>
+        </p>
+    </div>
+    <p>
+        <div>
+            <span>
+
+            </span>
+        </div>
+    </p>
+
     <h1 id="title">애국가</h1>
     <hr>
     <h2>1절</h2>
